--- a/app/_includes/about-people-unaffiliated.html
+++ b/app/_includes/about-people-unaffiliated.html
@@ -1,21 +1,21 @@
 {% assign person = include.person %}
 
-  <div class="person-unaffiliated" id="{{ person.name| slugify }}">
-    <div class="basics">
-      <strong class="name">{{ person.name }}</strong>
-      <span class="role">{{ person.role }}</span>
-    </div>
+<div class="body-text w-full py-32 border-t-1 border-black flex grid grid-cols-12 gap-24 relative">
+  <span class="label col-span-3">{{person.name}}</span>
+  <span class="col-span-6">{{person.role}}</span>
+  <span class="col-span-3 flex justify-end">
     {% if person.website or person.twitter_account_name or person.github_account_name %}
-      <ul class="social">
+      <ul class="flex items-center gap-12 md:gap-24">
         {% if person.website %}
-          <li class="website"><a href="{{ person.website}}">{{ person.website }}</a></li>
+          <li class="website"><a href="{{ person.website}}">Website</a></li>
         {% endif %}
         {% if person.twitter_account_name %}
-          <li class="twitter"><a href="https://www.twitter.com/{{ person.twitter_account_name }}">{{ person.twitter_account_name }}</a></li>
+          <li class="twitter"><a href="https://www.twitter.com/{{ person.twitter_account_name }}">{% include icon-twitter.html %}</a></li>
         {% endif %}
         {% if person.github_account_name %}
-          <li class="github"><a href="https://www.github.com/{{ person.github_account_name}}">{{ person.github_account_name }}</a></li>
+          <li class="github"><a href="https://www.github.com/{{ person.github_account_name}}">{% include icon-github.html %}</a></li>
         {% endif %}
       </ul>
     {% endif %}
-  </div>
+  </span>
+</div>
