--- a/app/_includes/arrow-link.html
+++ b/app/_includes/arrow-link.html
@@ -1,4 +1,4 @@
-<a href="{{ include.href }}" target="{% if include.target %}{{include.target}}{% else %}_self{% endif %}" class="flex items-center gap-12 text-24">
+<a href="{{ include.href }}" target="{% if include.target %}{{include.target}}{% else %}_self{% endif %}" class="flex items-center gap-12 body-text {% if include.card_link %}card-link{% endif %}">
   <span class="interactive-link dark">{{ include.label }}</span>
   {% include icon-right-arrow.html %}
 </a>
