--- a/app/_layouts/project.html
+++ b/app/_layouts/project.html
@@ -1,48 +1,38 @@
 ---
 layout: sectioned-page
 ---
-<section>
 
-  {% include project-nav.html %}
-
-  <div class="sleeve">
-
-    <h1><span>{{ page.type | capitalize }}:</span> {{ page.title }}</h1>
-
-    {% if page.project_website %}
-      <div class="slice">
-        <h2>Where can I find {{ page.title }}?</h2>
-        <div class="slice-body">
-          <a class="link-project" href="{{ page.project_website }}">{{ page.project_website }}</a>
-        </div>
-      </div>
-    {% endif %}
-
-    <div class="slice">
-      <h2>What does {{ page.title }} do?</h2>
-      <div class="slice-body">
-        {{ page.what_does_it_do | markdownify }}
-      </div>
+<section class="container">
+  <div class="page-hero">
+    <div class="page-hero__eyebrow">
+      <a href="/projects/" class="interactive-link dark">Projects</a>
     </div>
-
-    {% if page.why_does_it_exist %}
-      <div class="slice">
-        <h2>Why does {{ page.title }} exist?</h2>
-        <div class="slice-body">
-          {{ page.why_does_it_exist | markdownify }}
-        </div>
-      </div>
-    {% endif %}
-
-    {% if page.github_repo %}
-      <div class="slice github">
-        <a href="{{ page.github_repo }}" role="button" aria-label="{{ page.title }} on Github"><span>{{ page.title }} on Github</span></a>
-      </div>
-    {% endif %}
+    <h1 class="page-hero__title">{{ page.title }}</h1>
+    <h2 class="page-hero__subtitle">{{page.what_does_it_do}}</h2>
   </div>
 </section>
 
-<section>
+<div class="flex flex-col gap-40 md:gap-80 items-start pb-50 md:pb-100">
+
+  <section class="container flex flex-col gap-120">
+    <div class="flex flex-col md:grid md:grid-cols-3 gap-24 md:gap-40">
+      <h2 class="h2">Where can I find {{page.title}}</h2>
+      <div class="md:col-span-2 body-text flex flex-col gap-32 pt-20 max-w-[700px]">
+        {% if page.project_website %}
+          {% include arrow-link.html label=page.project_website href=page.project_website target="_blank" %}
+        {% endif %}
+        {% if page.github_repo %}
+          {% include arrow-link.html label="GitHub" href=page.github_repo target="_blank" %}
+        {% endif %}
+      </div>
+    </div>
+    <div class="flex flex-col md:grid md:grid-cols-3 gap-24 md:gap-40">
+      <h2 class="h2">Why does  {{page.title}} exits?</h2>
+      <div class="md:col-span-2 body-text flex flex-col gap-32 pt-20 max-w-[700px]">
+        {{ page.why_does_it_exist | markdownify }}
+      </div>
+    </div>
+  </section>
 
   {% if page.hero_image %}
     {% include project-hero.html %}
@@ -50,40 +40,36 @@ layout: sectioned-page
 
   {% assign news = site.data.news | where: "project", page.slug %}
   {% if news.size > 0 %}
-    <div class="slice news">
-
-      <div class="sleeve">
-        <h2>News</h2>
-        <div class="slice-body">
-          {% for article in news %}
-          <div class="news-item {{ article.type }}">
-            <div class="category">{{ article.type | capitalize }}</div>
-            <a href="{{ article.url }}">
-              <strong class="title">{{ article.title }}</strong>
-            </a>
-            <span class="date">{{ article.date }}</span>
-            {% if article.publication %}
-              <a href="{{ article.url }}" class="publication">{{ article.publication }}</a>
+    <section class="container flex flex-col items-start gap-40">
+      <h2 class="h2">News</h2>
+      <div class="flex flex-col items-start w-full">
+        {% for article in news %}
+          <div class="body-text w-full py-32 border-t-1 border-black last-of-type:border-b-1 flex grid grid-cols-12 gap-24 relative">
+            <span class="label col-span-3">{{article.date}}</span>
+            <span class="col-span-6">{{article.title}}</span>
+            {% assign label = "Read Blog Post" %}
+            {% if article.type == "press" %}
+              {% assign label = "Visit Article" %}
             {% endif %}
-            {% if article.archived_url %}
-              <a class="cc" href="{{ article.archived_url}}"><span class="sr-only">(Perma.cc archive)</span></a>
+            {% assign target = "_blank" %}
+            {% if article.type == "press" %}
+              {% assign target = "" %}
             {% endif %}
+            <span class="col-span-3 flex justify-end">
+              {% include arrow-link.html label=label href=article.url target=target card_link="true" %}
+            </span>
           </div>
-          {% endfor %}
-        </div>
+        {% endfor %}
       </div>
-
-    </div>
+    </section>
   {% endif %}
-
+  
   {% if page.who_contributed %}
-    <div class="slice project-people">
+    <section class="container pb-40">
+      <div class="flex flex-col md:grid md:grid-cols-3 gap-24 md:gap-40">
+        <h2 class="h2">Project Contributors</h2>
 
-      <div class="sleeve">
-        <h2>Project Contributors</h2>
-
-        <div class="slice-body additional-contributors">
-          <h4>Past and current</h4>
+        <div class="slice-body additional-contributors md:col-span-2 md:pt-20 body-text max-w-[750px]">
           {% for name in page.who_contributed %}
             {% assign person = site.data.people[name] %}
             <strong class="name">{{ person.name }}</strong>
@@ -91,21 +77,7 @@ layout: sectioned-page
           {% endfor %}
         </div>
       </div>
-
-    </div>
+    </section>
   {% endif %}
-
-  <!--
-  <div class="slice contact">
-
-    <div class="sleeve">
-      <h2>How can I learn more?</h2>
-      <div class="slice-body">
-        <p>If you’re interested in using {{ page.title }} or contributing to the project,{% if page.github_repo  %} check out the project’s <a href="{{ page.github_repo }}">Github page</a> or{% endif %} contact us at <a href="mailto:{{ site.email }}">{{ site.email }}</a>.</p>
-      </div>
-    </div>
-
-  </div>
-  -->
-
-</section>
+  
+</div>
