--- a/app/_includes/footer.html
+++ b/app/_includes/footer.html
@@ -16,10 +16,10 @@
         <a class="interactive-link" href="{{ site.baseurl }}/jobs/">Careers</a>
     </li>
     <li>
-      <a class="interactive-link" href="{{ site.baseurl }}/about/">Events</a>
+      <a class="interactive-link" href="{{ site.baseurl }}/events/">Events</a>
     </li>
     <li>
-        <a class="interactive-link" href="{{ site.baseurl }}/sketches/">Contact</a>
+        <a class="interactive-link" href="{{ site.baseurl }}/contact/">Contact</a>
     </li>
   </ul>
   <div class="md:col-span-12 flex items-center justify-end gap-15">
