--- a/app/_includes/nav.html
+++ b/app/_includes/nav.html
@@ -13,10 +13,10 @@
         <a class="interactive-link" href="{{ site.baseurl }}/jobs/">Careers</a>
     </li>
     <li>
-      <a class="interactive-link" href="{{ site.baseurl }}/about/">Events</a>
+      <a class="interactive-link" href="{{ site.baseurl }}/events/">Events</a>
     </li>
     <li>
-        <a class="interactive-link" href="{{ site.baseurl }}/sketches/">Contact</a>
+        <a class="interactive-link" href="{{ site.baseurl }}/contact/">Contact</a>
     </li>
   </ul>
   <div class="w-full container nav-menu__socials">
