--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -164,6 +164,16 @@ lil-header.expanded .nav-menu__overlay {
   @apply bg-black;
 }
 
+.interactive-link.reverse:after {
+  transform: scaleX(1);
+  transform-origin: 0 0;
+}
+
+.interactive-link.reverse:hover:after, a:hover .interactive-link.reverse:after {
+  transform: scaleX(0);
+  transform-origin: 100% 100%;
+}
+
 .label-value {
   display: flex;
   flex-direction: column;
