--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -231,6 +231,12 @@ lil-header.expanded .nav-menu__overlay {
   line-height: 120%;
 }
 
+.h1 {
+  font-size: clamp(64px, 12vw, 140px);
+  font-weight: 500;
+  line-height: 100%;
+}
+
 .h2 {
   font-size: 50px;
   line-height: 115%;
