--- a/app/_includes/header.html
+++ b/app/_includes/header.html
@@ -1,4 +1,4 @@
-<lil-header>
+<lil-header class="block relative z-header">
   <lil-marquee class="block marquee bg-purple py-10 px-20 uppercase font-mono text-announcement whitespace-nowrap overflow-hidden relative z-[100]">
     <a href="{{ site.baseurl }}/jobs/" class="marquee__inner">
       <div class="marquee__part inline-block">* We’re hiring — Product & Research Manager </div>
