--- a/app/_includes/author.html
+++ b/app/_includes/author.html
@@ -1,11 +1,14 @@
+<div>
 {% if include.author %}
-  <p class="post-author">Posted by
+  <h2>Authors:</h2>
+  <p class="post-author">
   {% for author in include.author %}
     {% assign person_record = site.data.people[author] %}
     {% if forloop.last and forloop.length > 1 %} and {% endif %}
-    <a href="{{ site.baseurl }}/about/#{{person_record.name | slugify }}">{{ person_record.name }}</a>{% if forloop.last != true and forloop.length > 2 %}, {% endif %}
+    <a href="{{ site.baseurl }}/about/#{{person_record.name | slugify }}" class="interactive-link dark reverse">{{ person_record.name }}</a>{% if forloop.last != true and forloop.length > 2 %}, {% endif %}
   {% endfor %}
   </p>
-{% elsif include.guest-author %}
-  <p class="post-author">Posted by {{ include.guest-author }}</p>
-{% endif %}
+  {% elsif include.guest-author %}
+    <p class="post-author">{{ include.guest-author }}</p>
+  {% endif %}
+</div>
