--- a/app/_layouts/project.html
+++ b/app/_layouts/project.html
@@ -45,7 +45,8 @@ layout: sectioned-page
       <div class="flex flex-col items-start w-full">
         {% for article in news %}
           <div class="body-text w-full py-32 border-t-1 border-black last-of-type:border-b-1 flex grid grid-cols-12 gap-24 relative">
-            <span class="label col-span-3">{{article.date}}</span>
+            <!-- format date as 02.12.24 -->
+            <span class="label col-span-3">{{ article.date | date: "%m/%d/%y" }}</span>
             <span class="col-span-6">{{article.title}}</span>
             {% assign label = "Read Blog Post" %}
             {% if article.type == "press" %}
