--- a/app/_includes/footer.html
+++ b/app/_includes/footer.html
@@ -24,9 +24,9 @@
       </li>
     </ul>
     <div class="md:col-span-12 flex items-center justify-end gap-15">
-      {% include icon-github.html %}
-      {% include icon-twitter.html %}
-      {% include icon-linkedin.html %}
+      <a href="{{ site.github_url}}" target="_blank">{% include icon-github.html %}</a>
+      <a href="{{ site.twitter_url }}" target="_blank">{% include icon-twitter.html %}</a>
+      <a href="{{ site.linkedin_url }}" target="_blank">{% include icon-linkedin.html %}</a>
     </div>
     <div class="w-full flex items-center justify-between gap-20 pt-24 border-t-1 border-white md:col-span-12 text-[16px]">
       <div class="flex items-center md:gap-100">
