--- a/app/_includes/nav.html
+++ b/app/_includes/nav.html
@@ -21,9 +21,9 @@
   </ul>
   <div class="w-full container nav-menu__socials">
     <div class="border-t-1 border-white flex items-center gap-15 pt-20">
-      {% include icon-github.html %}
-      {% include icon-twitter.html %}
-      {% include icon-linkedin.html %}
+      <a href="{{ site.github_url}}" target="_blank">{% include icon-github.html %}</a>
+      <a href="{{ site.twitter_url }}" target="_blank">{% include icon-twitter.html %}</a>
+      <a href="{{ site.linkedin_url }}" target="_blank">{% include icon-linkedin.html %}</a>
     </div>
   </div>
 </nav>
