--- a/app/_includes/footer.html
+++ b/app/_includes/footer.html
@@ -25,7 +25,7 @@
     </ul>
     <div class="md:col-span-12 flex items-center justify-end gap-15">
       <a href="{{ site.github_url}}" target="_blank">{% include icon-github.html %}</a>
-      <a href="{{ site.twitter_url }}" target="_blank">{% include icon-twitter.html %}</a>
+      <a href="{{ site.twitter_url }}" target="_blank">{% include icon-x.html %}</a>
       <a href="{{ site.linkedin_url }}" target="_blank">{% include icon-linkedin.html %}</a>
     </div>
     <div class="w-full flex items-center justify-between gap-20 pt-24 border-t-1 border-white md:col-span-12 text-[16px]">
