--- a/app/_includes/header-splash-logo.html
+++ b/app/_includes/header-splash-logo.html
@@ -1,4 +1,4 @@
-<svg class="relative z-[10]" role="img" tabindex="-1" width="40" height="auto" viewBox="0 0 40 57" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+<svg class="relative z-[10]" role="img" tabindex="-1" width="40" height="56" viewBox="0 0 40 57" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
     <title>Library Innovation Lab</title>
     <path d="M0 8.09524H32V56.6667L40 48.5714V0H8L0 8.09524Z" fill="currentColor" />
     <path d="M16 16.1905H8V48.5714H24V40.4762H16V16.1905Z" fill="currentColor" />
