--- a/app/_includes/nav.html
+++ b/app/_includes/nav.html
@@ -22,7 +22,7 @@
   <div class="w-full container nav-menu__socials">
     <div class="border-t-1 border-white flex items-center gap-15 pt-20">
       <a href="{{ site.github_url}}" target="_blank">{% include icon-github.html %}</a>
-      <a href="{{ site.twitter_url }}" target="_blank">{% include icon-twitter.html %}</a>
+      <a href="{{ site.twitter_url }}" target="_blank">{% include icon-x.html %}</a>
       <a href="{{ site.linkedin_url }}" target="_blank">{% include icon-linkedin.html %}</a>
     </div>
   </div>
