--- a/app/_layouts/tag_or_category.html
+++ b/app/_layouts/tag_or_category.html
@@ -13,7 +13,7 @@ custom-css: ['blog']
     {% include tag-filter.html %}
     <div class="flex flex-col gap-32 pb-40 border-b-1 border-black">
       <h1 class="h1">Blog</h1>
-      <div>Search</div>
+      {% include blog-search.html %}
     </div>
   </div>
 
