--- a/app/assets/css/blog.css
+++ b/app/assets/css/blog.css
@@ -75,3 +75,10 @@
   transform: scaleX(0);
   transform-origin: 100% 100%;
 }
+
+/* if post-grids__search-results, which is the sibling before post-grids__default, has any articles as children hide post-grids__default */
+
+.post-grids__search-results:has(article) ~ .post-grids__default {
+  display: none;
+}
+
