--- a/app/assets/css/blog.css
+++ b/app/assets/css/blog.css
@@ -78,7 +78,7 @@
 
 /* if post-grids__search-results, which is the sibling before post-grids__default, has any articles as children hide post-grids__default */
 
-.post-grids__search-results:has(article) ~ .post-grids__default {
+.post-grids__search-results:has(article) ~ .post-grids__default, .post-grids__search-results:has(.no-results) ~ .post-grids__default {
   display: none;
 }
 
