--- a/app/_layouts/sectioned-page.html
+++ b/app/_layouts/sectioned-page.html
@@ -5,7 +5,7 @@ layout: default
 
   {% include header.html %}
 
-  <main>
+  <main id="swup" class="transition-main">
     {{ content }}
   </main>
 
