--- a/app/_layouts/simple-page.html
+++ b/app/_layouts/simple-page.html
@@ -3,7 +3,7 @@ layout: sectioned-page
 ---
 <div class="container">
   <div class="sleeve">
-    <main class="simple-section">
+    <main id="swup" class="simple-section transition-main">
       {{ content }}
     </main>
   </div>
