--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -360,3 +360,11 @@ lil-header.expanded .nav-menu__overlay {
     transition: none !important;
   }
 }
+
+html.is-changing .transition-main {
+  transition: opacity 250ms ease-in-out;
+}
+
+html.is-animating .transition-main {
+  opacity: 0;
+}
