--- a/app/_includes/footer.html
+++ b/app/_includes/footer.html
@@ -1,8 +1,8 @@
 <footer class="bg-black text-white pt-60 pb-40">
   <div class="container md:grid md:grid-cols-12 md:gap-x-20 md:gap-y-26">
-    <div class="md:col-span-4 max-w-[350px]">
+    <a href="/" class="md:col-span-4 max-w-[350px]">
       {% include footer-logo.html %}
-    </div>
+    </a>
     <ul class="md:col-span-6 md:col-start-7 md:text-right md:grid md:grid-cols-2 md:gap-x-20 md:gap-y-10 text-[50px] md:leading-[100%] font-medium">
       <li>
         <a class="interactive-link" href="{{ site.baseurl }}/projects/">Our Work</a>
