--- a/app/_includes/about-people-affiliated.html
+++ b/app/_includes/about-people-affiliated.html
@@ -34,7 +34,7 @@
     {% if person.email or person.website or person.twitter or person.github %}
       <ul class="flex items-center gap-12 md:gap-24">
         {% if person.email %}
-          <li><a href="mailto:{{ person.email }}" target="_blank">Email</a></li>
+          <li><a href="mailto:{{ person.email }}" target="_blank">{% include icon-email.html %}</a></li>
         {% endif %}
         {% if person.website %}
           <li><a href="{{ person.website}}" target="_blank">{% include icon-website.html %}</a></li>
