--- a/app/_includes/blog-search.html
+++ b/app/_includes/blog-search.html
@@ -1,8 +1,8 @@
 <lil-search>
-  <form class="flex items-center gap-20 md:grid md:grid-cols-2">
-    <input id="search" type="search" class="md:col-span-1 md:flex-1 border-1 border-black px-24 py-12 text-18 focus:outline-none focus:border-[blue]" placeholder="Search for anything" />
+  <form class="flex items-center gap-8 md:gap-20 md:grid md:grid-cols-2">
+    <input id="search" type="search" class="md:col-span-1 flex-1 border-1 border-black px-12 py-8 md:px-24 md:py-12 text-16 md:text-18 focus:outline-none focus:border-[blue]" placeholder="Search for anything" />
     <div>
-      <button type="submit" class="label text-white px-20 bg-black py-12">Search</button>
+      <button type="submit" class="text-16 md:text-18 text-white px-18 py-9 md:px-20 bg-black md:py-12">Search</button>
     </div>
   </form>
 </lil-search>
