--- a/app/_includes/footer.html
+++ b/app/_includes/footer.html
@@ -3,7 +3,7 @@
     <a href="/" class="block relative w-full max-w-[160px] md:col-span-4 md:max-w-[340px]">
       {% include footer-logo.html %}
     </a>
-    <ul class="flex-1 text-right md:text-left md:col-span-6 md:col-start-7 md:text-right md:grid md:grid-cols-2 md:gap-x-20 md:gap-y-10 text-28 md:text-50 leading-[120%] md:leading-[100%] font-medium">
+    <ul class="footer-nav flex-1 text-right md:text-left md:col-span-6 md:col-start-7 md:text-right md:grid md:grid-cols-2 md:gap-x-20 md:gap-y-10 text-28 md:text-50 leading-[120%] md:leading-[100%] font-medium">
       <li>
         <a class="interactive-link" href="{{ site.baseurl }}/projects/">Our Work</a>
       </li>
