--- a/app/_includes/tag-filter.html
+++ b/app/_includes/tag-filter.html
@@ -4,12 +4,7 @@
 
 <div>
   <nav aria-label="Featured Tags">
-    <ul class="flex items-center gap-10">
-      <!-- <li>
-        <a class="block label px-24 py-12 border-1 border-black text-black active:text-white active:bg-black md:hover:text-white md:hover:bg-black transition-colors duration-300 ease" href="{{ site.baseurl }}/blog/"{% if current == "all" %} aria-current="true"{% endif %}>
-          All
-        </a>
-      </li> -->
+    <ul class="flex flex-wrap items-center gap-10">
       {% for tag in site.data.featured_tags %}
         {% assign isActive = false  %}
         {% if current == tag %}
@@ -22,7 +17,7 @@
         {% endfor %}
         <li>
           <a
-            class="block label px-24 py-12 border-1 border-black text-black active:text-white active:bg-black md:hover:text-white md:hover:bg-black transition-colors duration-300 ease {% if isActive %} bg-black text-white{% endif %}" 
+            class="block text-14 md:text-16 px-10 py-6 md:px-24 md:py-12 border-1 border-black text-black active:text-white active:bg-black md:hover:text-white md:hover:bg-black transition-colors duration-300 ease {% if isActive %}bg-black text-white{% endif %}" 
             href="{% if current == tag %}{{ site.baseurl }}/blog{% else %}{{ site.baseurl }}/blog/tag/{{ tag | slugify}}/{% endif %}"{% if current == tag %} aria-current="true"{% endif %}
           >
           {{ tag }}
