--- a/app/_layouts/post.html
+++ b/app/_layouts/post.html
@@ -3,14 +3,14 @@ layout: sectioned-page
 custom-css: ['blog']
 ---
 
-<section class="container pt-80">
-  <div class="flex flex-col gap-50 md:gap-120 mb-56">
+<section class="container pt-50 md:pt-80">
+  <div class="flex flex-col gap-50 md:gap-120 mb-14 md:mb-56">
     {% include tag-filter.html tags=page.tags %}
-    <div class="flex flex-col items-start gap-20">
+    <div class="flex flex-col items-start gap-10 md:gap-20">
       <a href="/blog" class="label interactive-link dark reverse">Blog</a>
-      <div class="flex flex-col md:grid md:grid-cols-3 gap-32 pb-40 md:pb-80 border-b-1 border-black">
+      <div class="flex flex-col md:grid md:grid-cols-3 gap-14 md:gap-32 pb-40 md:pb-80 border-b-1 border-black">
         <h1 class="h2">{{page.title}}</h1>
-        <div class="md:col-span-2 body-text max-w-[700px] pt-10">
+        <div class="md:col-span-2 body-text max-w-[700px] md:pt-10">
           {% assign paragraphs = content | newline_to_br | split: '<br />' %}
           {% assign first_text_paragraph = '' %}
           {% for paragraph in paragraphs %}
@@ -33,11 +33,16 @@ custom-css: ['blog']
 </section>
 <section class="container post">
   <article role="article" itemscope itemtype="http://schema.org/BlogPosting" class="flex flex-col gap-24 md:grid md:grid-cols-12 body-text pb-150">
-    <header class="md:col-span-3">
+    <header class="grid grid-cols-2 md:flex md:col-span-3">
       <time class="post-date" datetime="{{ page.date | date_to_xmlschema }}">{{ page.date | date: "%B %-d, %Y" }}</time>
+      <div class="md:hidden">
+        {% include author.html author=page.author guest-author=page.guest-author %}
+      </div>
     </header>
-    <div class="md:col-span-7 flex flex-col gap-72" itemprop="articleBody">
-      {% include author.html author=page.author guest-author=page.guest-author %}
+    <div class="md:col-span-7 flex flex-col gap-32 md:gap-72" itemprop="articleBody">
+      <div class="hidden md:block">
+        {% include author.html author=page.author guest-author=page.guest-author %}
+      </div>
       <div class="post-content">
         {{ content }}
       </div>
