Announcement text size

--- a/app/_includes/header.html
+++ b/app/_includes/header.html
@@ -1,5 +1,5 @@
 <lil-header class="block relative z-header">
-  <lil-marquee class="block marquee bg-purple py-10 px-20 uppercase font-mono text-14 md:text-16 leading-120 tracking-[0.02em] md:tracking-[0.07em] text-announcement whitespace-nowrap overflow-hidden relative z-[100]">
+  <lil-marquee class="block marquee bg-purple py-6 md:py-10 px-20 uppercase font-mono text-14 md:text-16 leading-120 tracking-[0.02em] md:tracking-[0.07em] text-announcement whitespace-nowrap overflow-hidden relative z-[100]">
     <a href="{{ site.baseurl }}/jobs/" class="marquee__inner">
       <div class="marquee__part inline-block">* We’re hiring — Product & Research Manager </div>
       <div class="marquee__part inline-block" aria-hidden="true">* We’re hiring — Product & Research Manager </div>
