Capitalize Us in footer

--- a/app/_includes/footer.html
+++ b/app/_includes/footer.html
@@ -11,7 +11,7 @@
         <a class="interactive-link" href="{{ site.baseurl }}/blog/">Blog</a>
       </li>
       <li>
-          <a class="interactive-link" href="{{ site.baseurl }}/about/">About us</a>
+          <a class="interactive-link" href="{{ site.baseurl }}/about/">About Us</a>
       </li>
       <li>
           <a class="interactive-link" href="{{ site.baseurl }}/jobs/">Careers</a>
