--- a/app/_includes/about-people-unaffiliated.html
+++ b/app/_includes/about-people-unaffiliated.html
@@ -1,9 +1,9 @@
 {% assign person = include.person %}
 
-<div class="body-text w-full py-32 border-t-1 border-black flex grid grid-cols-12 gap-24 relative">
-  <span class="label col-span-3">{{person.name}}</span>
-  <span class="col-span-6">{{person.role}}</span>
-  <span class="col-span-3 flex justify-end">
+<div class="body-text w-full py-32 border-t-1 border-black flex grid grid-cols-1 md:grid-cols-12 gap-4 md:gap-24 relative">
+  <span class="label md:col-span-3">{{person.name}}</span>
+  <span class="md:col-span-6">{{person.role}}</span>
+  <span class="pt-20 md:pt-0 md:col-span-3 flex md:justify-end">
     {% if person.website or person.twitter_account_name or person.github_account_name %}
       <ul class="flex items-center gap-12 md:gap-24">
         {% if person.website %}
