--- a/app/_includes/nav.html
+++ b/app/_includes/nav.html
@@ -1,29 +1,31 @@
 <nav aria-label="main" class="nav-menu">
-  <ul class="nav-menu__list container">
-    <li>
-      <a class="interactive-link" href="{{ site.baseurl }}/projects/">Our Work</a>
-    </li>
-    <li>
-      <a class="interactive-link" href="{{ site.baseurl }}/blog/">Blog</a>
-    </li>
-    <li>
-        <a class="interactive-link" href="{{ site.baseurl }}/about/">About</a>
-    </li>
-    <li>
-        <a class="interactive-link" href="{{ site.baseurl }}/jobs/">Careers</a>
-    </li>
-    <li>
-      <a class="interactive-link" href="{{ site.baseurl }}/events/">Events</a>
-    </li>
-    <li>
-        <a class="interactive-link" href="{{ site.baseurl }}/contact/">Contact</a>
-    </li>
-  </ul>
-  <div class="w-full container nav-menu__socials">
-    <div class="border-t-1 border-white flex items-center gap-15 pt-20">
-      <a href="{{ site.github_url}}" target="_blank">{% include icon-github.html %}</a>
-      <a href="{{ site.twitter_url }}" target="_blank">{% include icon-x.html %}</a>
-      <a href="{{ site.linkedin_url }}" target="_blank">{% include icon-linkedin.html %}</a>
+  <div class="nav-menu__inner">
+    <ul class="nav-menu__list container">
+      <li>
+        <a class="interactive-link" href="{{ site.baseurl }}/projects/">Our Work</a>
+      </li>
+      <li>
+        <a class="interactive-link" href="{{ site.baseurl }}/blog/">Blog</a>
+      </li>
+      <li>
+          <a class="interactive-link" href="{{ site.baseurl }}/about/">About</a>
+      </li>
+      <li>
+          <a class="interactive-link" href="{{ site.baseurl }}/jobs/">Careers</a>
+      </li>
+      <li>
+        <a class="interactive-link" href="{{ site.baseurl }}/events/">Events</a>
+      </li>
+      <li>
+          <a class="interactive-link" href="{{ site.baseurl }}/contact/">Contact</a>
+      </li>
+    </ul>
+    <div class="w-full container nav-menu__socials">
+      <div class="border-t-1 border-white flex items-center gap-15 pt-20">
+        <a href="{{ site.github_url}}" target="_blank">{% include icon-github.html %}</a>
+        <a href="{{ site.twitter_url }}" target="_blank">{% include icon-x.html %}</a>
+        <a href="{{ site.linkedin_url }}" target="_blank">{% include icon-linkedin.html %}</a>
+      </div>
     </div>
   </div>
 </nav>
