Add SEM posting

--- a/app/_includes/header.html
+++ b/app/_includes/header.html
@@ -1,4 +1,10 @@
 {% if page.slug == "home" %}
+    <div class="hiring-announcement">
+      <a href="{{ site.baseurl }}/jobs/">
+        We're hiring!
+        We're looking for a Software Engineering Manager.
+      </a>
+    </div>
   <header class="header-splash">
     <div>
       {% include header-splash-logo.html %}
